--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@prismicio/client": "^7.13.0",
+    "@prismicio/react": "^2.9.1",
+    "prismic-dom": "^2.2.7",
+    "prismic-javascript": "^3.0.2",
+    "prismic-reactjs": "^1.3.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
