--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@prismicio/client": "^7.13.0",
     "@prismicio/react": "^2.9.1",
+    "aos": "^2.3.4",
     "prismic-dom": "^2.2.7",
     "prismic-javascript": "^3.0.2",
     "prismic-reactjs": "^1.3.4",
